--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Armory</title>
-    <meta name="description" content="Skywork Generated Project" />
-    <meta name="author" content="Skywork" />
+    <meta name="description" content="Cat Armory" />
+    <meta name="author" content="Armory" />
 
-    <meta property="og:title" content="Skywork Generated Project" />
-    <meta property="og:description" content="Skywork Generated Project" />
+    <meta property="og:title" content="Cat Armory" />
+    <meta property="og:description" content="Cat Armory" />
     <meta property="og:type" content="website" />
   </head>
 
